cmake_minimum_required(VERSION 3.16)
project(feedx LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
endif()

set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)

if(NOT CMAKE_CONFIGURATION_TYPES)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Debug)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
    endif()
endif()

set(ENV_FILE "${CMAKE_SOURCE_DIR}/.env")
if(EXISTS ${ENV_FILE})
    file(READ "${ENV_FILE}" ENV_CONTENTS)
    string(REGEX REPLACE "\r?\n" ";" ENV_LINES "${ENV_CONTENTS}")

    foreach(line IN LISTS ENV_LINES)
        if(line MATCHES "^([A-Za-z0-9_]+)=(.*)$")
            set(var_name "${CMAKE_MATCH_1}")
            set(var_value "${CMAKE_MATCH_2}")
            set(ENV{${var_name}} "${var_value}")
            message(STATUS "Loaded env var: ${var_name}")
        endif()
    endforeach()
else()
    message(WARNING ".env file not found at ${ENV_FILE}")
endif()

add_subdirectory(feedx-core)
add_subdirectory(feedx-aggregator)
add_subdirectory(feedx-monitor)
